Fix non wrap th column name

--- a/themes/style.css
+++ b/themes/style.css
@@ -195,7 +195,6 @@ blockquote i {
 }
 
 th{
-  white-space: nowrap;
   text-align: center;
 }
 
